--- a/src/information/pages/intro.css
+++ b/src/information/pages/intro.css
@@ -1,17 +1,17 @@
-.container{
+/* .container{
     display: flex;
   }
   
   .carrercounsellingimg{
-    flex: 1;
     padding: 5px;
-  }
+
+  } */
   
   .intro{
     font-size:x-large;
-    display: flex;
+    /* display: flex; */
     text-align: justify;
     color: #282c34;
-    margin: 2rem;
+    margin: 4rem;
   }
   
